@@ -1,6 +1,6 @@
 Steve Harris	<steve@plugin.org.uk>
 Uwe Koloska
-Jesse Chappel
+Jesse Chappell
 
 Guidelines for authors:
 
